--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
 }
 
 .background {
-    background-image: url('https://images3.alphacoders.com/134/thumb-1920-1341034.png');
+    background-image: url('Images/background.jpg');
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -18,8 +18,9 @@ html, body {
 }
 
 .content {
-    background-color: rgba(0, 0, 0, 0.85);
-    padding: 30px;
+    background-color: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(5px);
+    padding: 40px;
     border-radius: 20px;
     text-align: center;
 }
@@ -34,7 +35,7 @@ html, body {
 .info-block {
     text-align: center;
     color: darkgrey;
-    font: bolder 16px "Calibri Light";
+    font: bolder 17px "Calibri Light";
 }
 
 .category-name {
@@ -47,22 +48,21 @@ html, body {
 .container-category {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
     padding: 30px;
-    max-width: 910px;
+    max-width: 1000px;
     margin: 0 auto;
-    gap: 30px;
+    gap: 40px;
 }
 
 .left-column, .right-column {
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 40px;
 }
 
 .block-gameplay {
     background-color: rgba(108, 108, 108, 0.34);
-    padding: 20px;
+    padding: 30px;
     border: 2px solid #0073d1;
     border-radius: 10px;
     text-align: center;
@@ -70,21 +70,21 @@ html, body {
 
 .block-items {
     background-color: rgba(108, 108, 108, 0.34);
-    padding: 20px;
+    padding: 30px;
     border: 2px solid #0073d1;
     border-radius: 10px;
 }
 
 .block-visual {
     background-color: rgba(108, 108, 108, 0.34);
-    padding: 20px;
+    padding: 30px;
     border: 2px solid #0073d1;
     border-radius: 10px;
 }
 
 .block-cheats {
     background-color: rgba(108, 108, 108, 0.34);
-    padding: 20px;
+    padding: 30px;
     border: 2px solid #0073d1;
     border-radius: 10px;
 }
